home parallax init

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,4 +1,12 @@
 <div class="home-hero-parallax">
-    <p>This is the partial for view 1. by {{fullname}}</p>
-    <p>Hello, {{name}}!</p>
+    <div class="container">
+        <div class="welcome-text">
+            <h1>It's<br>Naisu<br>To Meet You</h1>
+            <a class="btn btn-o" href="#">Tell Me More</a>
+        </div>
+        <div class="parallax-container">
+            <div class="layer parallax" data-depth="0.00"><img src="../assets/img/layer1.png"></div>
+            <div class="layer parallax" data-depth="1.00"><img src="../assets/img/layer2.png"></div>
+        </div>
+    </div>
 </div>
