--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,12 +1,19 @@
 <div class="home-hero-parallax">
+    <div id="parallax-container">
+        <div id="layer1"><img src="../assets/img/layer1.png"></div>
+        <div id="layer2"><img src="../assets/img/layer2.png"></div>
+        <div id="layer3"><img src="../assets/img/layer3.png"></div>
+        <div id="layer4"><img src="../assets/img/layer4.png"></div>
+        <div id="layer5"><img src="../assets/img/layer5.png"></div>
+        <div id="layer6"><img src="../assets/img/layer6.png"></div>
+    </div>
     <div class="container">
         <div class="welcome-text">
             <h1>It's<br>Naisu<br>To Meet You</h1>
             <a class="btn btn-o" href="#">Tell Me More</a>
         </div>
-        <div class="parallax-container">
-            <div class="layer parallax" data-depth="0.00"><img src="../assets/img/layer1.png"></div>
-            <div class="layer parallax" data-depth="1.00"><img src="../assets/img/layer2.png"></div>
-        </div>
     </div>
 </div>
+<section id="home-portfolio">
+
+</section>
