--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,6 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="assets/js/main.js"></script>
 </head>
 <body>
 <div class="container">
@@ -100,12 +98,15 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
 
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="assets/js/main.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <!--<script src="bower_components/parallax-js/js/kinetics.js"></script>-->
-  <!--<script src="bower_components/jparallax/js/jquery.parallax.min.js"></script>-->
+  <script src="bower_components/isotope/dist/isotope.pkgd.min.js"></script>
+  <script src="bower_components/angular-isotope/dist/angular-isotope.min.js"></script>
+  <script src="bower_components/angular-images-loaded/angular-images-loaded.js"></script>
   <script src="app.js"></script>
   <script src="home/home.js"></script>
 </body>
