--- a/app/index.html
+++ b/app/index.html
@@ -2,25 +2,27 @@
 <!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js" ng-controller="GlobalController"> <!--<![endif]-->
 <head>
-  <base href="/">
+  <script>
+        document.write('<base href="' + document.location + '" />');
+      </script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Naisu Web</title>
-  <link rel="icon" href="assets/img/footer-logo.png">
+  <link rel="icon" ng-href="{{baseUrl}}assets/img/footer-logo.png">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" ng-href="{{baseUrl}}bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" ng-href="{{baseUrl}}bower_components/html5-boilerplate/dist/css/normalize.css">
+  <link rel="stylesheet" ng-href="{{baseUrl}}bower_components/html5-boilerplate/dist/css/main.css">
+  <link rel="stylesheet" ng-href="{{baseUrl}}bower_components/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" ng-href="{{baseUrl}}assets/css/style.css">
   <script src="bower_components/jQuery/dist/jquery.min.js"></script>
 </head>
 <body>
 <div class="container">
-  <nav class="navbar navbar-default" ng-controller="GlobalController">
+  <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
