--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" ng-href="{{baseUrl}}bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" ng-href="{{baseUrl}}bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" ng-href="{{baseUrl}}assets/css/style.css">
-  <script src="https://janskiachmd.github.io/naisu/app/bower_components/jQuery/dist/jquery.min.js"></script>
+  <script src="bower_components/jQuery/dist/jquery.min.js"></script>
 </head>
 <body>
 <div class="container">
@@ -102,15 +102,15 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
 
-  <script src="https://janskiachmd.github.io/naisu/app/assets/js/main.js"></script>
-  <script src="https://janskiachmd.github.io/naisu/app/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="https://janskiachmd.github.io/naisu/app/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-  <script src="https://janskiachmd.github.io/naisu/app/bower_components/angular/angular.js"></script>
-  <script src="https://janskiachmd.github.io/naisu/app/bower_components/angular-route/angular-route.js"></script>
-  <script src="https://janskiachmd.github.io/naisu/app/bower_components/isotope/dist/isotope.pkgd.min.js"></script>
-  <script src="https://janskiachmd.github.io/naisu/app/bower_components/angular-isotope/dist/angular-isotope.min.js"></script>
-  <script src="https://janskiachmd.github.io/naisu/app/bower_components/angular-images-loaded/angular-images-loaded.js"></script>
-  <script src="https://janskiachmd.github.io/naisu/app/app.js"></script>
-  <script src="https://janskiachmd.github.io/naisu/app/home/home.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/isotope/dist/isotope.pkgd.min.js"></script>
+  <script src="bower_components/angular-isotope/dist/angular-isotope.min.js"></script>
+  <script src="bower_components/angular-images-loaded/angular-images-loaded.js"></script>
+  <script src="app.js"></script>
+  <script src="home/home.js"></script>
 </body>
 </html>
