--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,11 +1,11 @@
 <div class="home-hero-parallax">
     <div id="parallax-container">
-        <div id="layer1"><img src="../assets/img/layer1.png"></div>
-        <div id="layer2"><img src="../assets/img/layer2.png"></div>
-        <div id="layer3"><img src="../assets/img/layer3.png"></div>
-        <div id="layer4"><img src="../assets/img/layer4.png"></div>
-        <div id="layer5"><img src="../assets/img/layer5.png"></div>
-        <div id="layer6"><img src="../assets/img/layer6.png"></div>
+        <div id="layer1"><img ng-src="assets/img/layer1.png"></div>
+        <div id="layer2"><img ng-src="assets/img/layer2.png"></div>
+        <div id="layer3"><img ng-src="assets/img/layer3.png"></div>
+        <div id="layer4"><img ng-src="assets/img/layer4.png"></div>
+        <div id="layer5"><img ng-src="assets/img/layer5.png"></div>
+        <div id="layer6"><img ng-src="assets/img/layer6.png"></div>
     </div>
     <div class="container">
         <div class="welcome-text">
@@ -24,7 +24,7 @@
             <button type="button" class="btn" ok-sel=".typography">Typography</button>
         </div>
         <ul isotope-container="isotope-container" class="isotope">
-            <li ng-repeat="x in xList" isotope-item="" class="{{x.class}} col-sm-4">
+            <li ng-repeat="x in xList" isotope-item="" class="{{x.class}} col-sm-4 col768-6">
                 <img class="portfolio-thum" ng-src="{{x.img}}" width="100%">
                 <h3 class="portfolio-name">{{x.name}}</h3>
                 <h5 class="portfolio-class">{{x.classname}}</h5>
