--- a/app/index.html
+++ b/app/index.html
@@ -4,24 +4,22 @@
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js" ng-controller="GlobalController"> <!--<![endif]-->
 <head>
-  <script>
-        document.write('<base href="' + document.location + '" />');
-      </script>
+  <base href="/">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Naisu Web</title>
-  <link rel="icon" ng-href="{{baseUrl}}assets/img/footer-logo.png">
+  <link rel="icon" ng-href="{{baseUrl()}}/assets/img/footer-logo.png">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" ng-href="{{baseUrl}}bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" ng-href="{{baseUrl}}bower_components/html5-boilerplate/dist/css/normalize.css">
-  <link rel="stylesheet" ng-href="{{baseUrl}}bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" ng-href="{{baseUrl}}bower_components/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" ng-href="{{baseUrl}}assets/css/style.css">
-  <script src="bower_components/jQuery/dist/jquery.min.js"></script>
+  <link rel="stylesheet" ng-href="{{baseUrl()}}/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" ng-href="{{baseUrl()}}/bower_components/html5-boilerplate/dist/css/normalize.css">
+  <link rel="stylesheet" ng-href="{{baseUrl()}}/bower_components/html5-boilerplate/dist/css/main.css">
+  <link rel="stylesheet" ng-href="{{baseUrl()}}/bower_components/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" ng-href="{{baseUrl()}}/assets/css/style.css">
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
-<div class="container">
+<div class="container nav-container">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -32,16 +30,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"><img src="assets/img/naisu-logo.png"></a>
+        <a class="navbar-brand" href="#"><img ng-src="{{baseUrl()}}assets/img/naisu-logo.png"></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li ng-class="{active: isActive('/')}"><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/portfolio">Portfolio</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li ng-class="{active: isActive('/')}"><a ng-href="{{baseUrl()}}/">Home</a></li>
+          <li><a ng-href="{{baseUrl()}}/about">About</a></li>
+          <li><a ng-href="{{baseUrl()}}/portfolio">Portfolio</a></li>
+          <li><a ng-href="{{baseUrl()}}/contact">Contact</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -92,7 +90,7 @@
         <p class="copyright">&copy; Copyright 2017 naisustudio.com</p>
       </div>
       <div class="col-sm-4 footer-logo">
-        <img src="assets/img/footer-logo.png">
+        <img ng-src="{{baseUrl()}}assets/img/footer-logo.png">
       </div>
     </div>
   </div>
@@ -102,15 +100,17 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
 
-  <script src="assets/js/main.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/isotope/dist/isotope.pkgd.min.js"></script>
-  <script src="bower_components/angular-isotope/dist/angular-isotope.min.js"></script>
-  <script src="bower_components/angular-images-loaded/angular-images-loaded.js"></script>
-  <script src="app.js"></script>
-  <script src="home/home.js"></script>
+  <script src="/assets/js/main.js"></script>
+  <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+  <script src="/bower_components/angular/angular.js"></script>
+  <script src="/bower_components/angular-route/angular-route.js"></script>
+  <script src="/bower_components/isotope/dist/isotope.pkgd.min.js"></script>
+  <script src="/bower_components/angular-isotope/dist/angular-isotope.min.js"></script>
+  <script src="/bower_components/angular-images-loaded/angular-images-loaded.js"></script>
+  <script src="/home/home.js"></script>
+  <script src="/about/about.js"></script>
+  <script src="/portfolio/portfolio.js"></script>
+  <script src="/app.js"></script>
 </body>
 </html>
