about us page added

--- a/app/portfolio/portfolio.html
+++ b/app/portfolio/portfolio.html
@@ -1,5 +1,5 @@
 <div class="container portfolio-container" ng-controller="PortfolioCtrl">
-    <h3 class="portfolio-name">{{detailData.name}}</h3>
+    <h3 class="page-title">{{detailData.name}}</h3>
     <div class="portfolio-detail">
         <div class="clearfix">
             <span class="class-name pull-left">
