--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9" ng-controller="GlobalController"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js" ng-controller="GlobalController"> <!--<![endif]-->
 <head>
-  <base href="/">
+  <base href="http://naisustudio.com/beta/">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Naisu Web</title>
@@ -36,10 +36,10 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li ng-class="{active: isActive('/')}"><a ng-href="/home/">Home</a></li>
-          <li ng-class="{active: isActive('/about')}"><a ng-href="/about/">About</a></li>
-          <li ng-class="{active: isActive('/portfolio')}"><a ng-href="/portfolio/">Portfolio</a></li>
-          <li ng-class="{active: isActive('/contact')}"><a ng-href="/contact/">Contact</a></li>
+          <li ng-class="{active: isActive('/')}"><a ng-href="home/">Home</a></li>
+          <li ng-class="{active: isActive('/about')}"><a ng-href="about/">About</a></li>
+          <li ng-class="{active: isActive('/portfolio')}"><a ng-href="portfolio/">Portfolio</a></li>
+          <li ng-class="{active: isActive('/contact')}"><a ng-href="contact/">Contact</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
