--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,4 +1,4 @@
-<div class="home-hero-parallax">
+<div class="home-hero-parallax" parallax-nya>
     <div id="parallax-container">
         <div id="layer1"><img ng-src="assets/img/layer1.png"></div>
         <div id="layer2"><img ng-src="assets/img/layer2.png"></div>
@@ -13,16 +13,16 @@
     </div>
 </div>
 <section id="home-portfolio">
-    <div class="container">
-        <div class="btn-group portfolio-btn" opt-kind="" ok-key="filter">
-            <button type="button" class="btn active" ok-sel="*">All</button>
-            <button type="button" class="btn" ok-sel=".artwork">Artwork</button>
-            <button type="button" class="btn" ok-sel=".branding">Branding</button>
-            <button type="button" class="btn" ok-sel=".illustration">Illustration</button>
-            <button type="button" class="btn" ok-sel=".typography">Typography</button>
+    <div class="container" isotope-nya>
+        <div class="btn-group portfolio-btn filter-button-group button-group">
+            <button type="button" class="btn button active" data-filter="*">All</button>
+            <button type="button" class="btn button" data-filter=".artwork">Artwork</button>
+            <button type="button" class="btn button" data-filter=".branding">Branding</button>
+            <button type="button" class="btn button" data-filter=".illustration">Illustration</button>
+            <button type="button" class="btn button" data-filter=".typography">Typography</button>
         </div>
-        <ul isotope-container="isotope-container" class="isotope">
-            <li ng-repeat="x in xList" isotope-item="" class="{{x.class}} col-sm-4 col768-6">
+        <ul class="isotope">
+            <li ng-repeat="x in xList" class="{{x.class}} col-sm-4 col768-6 grid-item" data-category="{{x.class}}">
                 <a ng-href="portfolio/{{x.id}}"><img class="portfolio-thum" ng-src="{{x.img}}" width="100%"></a>
                 <a ng-href="portfolio/{{x.id}}"><h3 class="portfolio-name">{{x.name}}</h3></a>
                 <h5 class="portfolio-class">{{x.classname}}</h5>
