--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9" ng-controller="GlobalController"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js" ng-controller="GlobalController"> <!--<![endif]-->
 <head>
-  <base href="http://naisustudio.com/beta/">
+  <base href="/">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Naisu Web</title>
@@ -12,45 +12,48 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" ng-href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" ng-href="assets/css/style.css">
   <link rel="stylesheet" ng-href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" ng-href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" ng-href="bower_components/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" ng-href="assets/css/style.css">
+  <link rel="stylesheet" ng-href="bower_components/please-wait/build/please-wait.css">
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
 </head>
-<body>
-<div class="container nav-container">
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#!/"><img ng-src="assets/img/naisu-logo.png"></a>
-      </div>
+<body ng-init="load()">
+<div class="nav-header">
+  <div class="container nav-container">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="home/"><img ng-src="assets/img/naisu-logo.png"></a>
+        </div>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li ng-class="{active: isActive('/')}"><a ng-href="home/">Home</a></li>
-          <li ng-class="{active: isActive('/about')}"><a ng-href="about/">About</a></li>
-          <li ng-class="{active: isActive('/portfolio')}"><a ng-href="portfolio/">Portfolio</a></li>
-          <li ng-class="{active: isActive('/contact')}"><a ng-href="contact/">Contact</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li ng-class="{active: isActive('/')}"><a ng-href="home/">Home</a></li>
+            <li ng-class="{active: isActive('/about')}"><a ng-href="about/">About</a></li>
+            <li ng-class="{active: isActive('/portfolio')}"><a ng-href="portfolio/">Portfolio</a></li>
+            <li ng-class="{active: isActive('/contact')}"><a ng-href="contact/">Contact</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+  </div>
 </div>
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <div ng-view></div>
+  <div class="content-ng" ng-view></div>
 
 <footer>
   <div class="container">
@@ -105,12 +108,21 @@
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/isotope/dist/isotope.pkgd.min.js"></script>
-  <script src="bower_components/angular-isotope/dist/angular-isotope.min.js"></script>
-  <script src="bower_components/angular-images-loaded/angular-images-loaded.js"></script>
+  <script src="bower_components/isotope/jquery.isotope.min.js"></script>
+  <script src="bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <!--<script src="bower_components/angular-isotope/dist/angular-isotope.min.js"></script>-->
+  <!--<script src="bower_components/angular-images-loaded/angular-images-loaded.js"></script>-->
+  <script src="bower_components/please-wait/build/please-wait.min.js"></script>
   <script src="home/home.js"></script>
   <script src="about/about.js"></script>
   <script src="portfolio/portfolio.js"></script>
   <script src="app.js"></script>
+  <script type="text/javascript">
+      window.loading_screen = window.pleaseWait({
+          logo: "assets/img/naisu-logo.png",
+          backgroundColor: '#ffffff',
+          loadingHtml: "<div class='spinner'></div>"
+      });
+  </script>
 </body>
 </html>
