contact page added

--- a/app/index.html
+++ b/app/index.html
@@ -116,6 +116,7 @@
   <script src="home/home.js"></script>
   <script src="about/about.js"></script>
   <script src="portfolio/portfolio.js"></script>
+  <script src="contact/contact.js"></script>
   <script src="app.js"></script>
   <script type="text/javascript">
       window.loading_screen = window.pleaseWait({
