set timeout 2s to isotope in portfolio page

--- a/app/portfolio/portfolio.html
+++ b/app/portfolio/portfolio.html
@@ -1,5 +1,5 @@
 <section class="portfolio-section">
-    <div class="container" isotope-nya>
+    <div class="container" isotope-nya="">
         <div class="btn-group portfolio-btn filter-button-group button-group">
             <button type="button" class="btn button active" data-filter="*">All</button>
             <button type="button" class="btn button" data-filter=".artwork">Artwork</button>
